force-app/main/default/objects/STATS_MENSUELS__c/STATS_MENSUELS__c.object-meta.xml
<CustomObject>
    <label>STATS MENSUELS</label>
    <nameField>
        <label>ANNEE-MOIS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>STATS MENSUELS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>