force-app/main/default/objects/STATS_MENSUELS__c/fields/Nb_Commandes__c.field-meta.xml
<CustomField>
    <fullName>Nb_Commandes__c</fullName>
    <label>Nb Commandes</label>
    <summaryForeignKey>STATS_OPPOR__c.STATS_MENSUELS__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>