force-app/main/default/objects/STATS_MENSUELS__c/fields/PC_Refaire__c.field-meta.xml
<CustomField>
    <fullName>PC_Refaire__c</fullName>
    <formula>(Refaire__c / Nb_Commandes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Refaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>