force-app/main/default/objects/STATS_MENSUELS__c/fields/Praticien__c.field-meta.xml
<CustomField>
    <fullName>Praticien__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>STATS MENSUELS</relationshipLabel>
    <relationshipName>STATS_MENSUELS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>