force-app/main/default/objects/STATS_MENSUELS__c/fields/Probleme__c.field-meta.xml
<CustomField>
    <fullName>Probleme__c</fullName>
    <label>Nb Probleme</label>
    <summarizedField>STATS_OPPOR__c.PbCase__c</summarizedField>
    <summaryForeignKey>STATS_OPPOR__c.STATS_MENSUELS__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>