force-app/main/default/objects/STATS_MENSUELS__c/fields/Refaire__c.field-meta.xml
<CustomField>
    <fullName>Refaire__c</fullName>
    <label>Nb Refaire</label>
    <summarizedField>STATS_OPPOR__c.A_refaire__c</summarizedField>
    <summaryForeignKey>STATS_OPPOR__c.STATS_MENSUELS__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>