force-app/main/default/objects/STATS_MENSUELS__c/fields/Urgent__c.field-meta.xml
<CustomField>
    <fullName>Urgent__c</fullName>
    <label>Nb Urgent</label>
    <summarizedField>STATS_OPPOR__c.Urgent__c</summarizedField>
    <summaryForeignKey>STATS_OPPOR__c.STATS_MENSUELS__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>